--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
