--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.3",
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.12.2",
@@ -26,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.3",
+    "swr": "^2.3.6",
     "zod": "^4.1.11"
   },
   "devDependencies": {
